<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:id="@+id/name_field" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/imie_studenta" tools:ignore="Autofill"
            tools:capitalize="words"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="6"
            android:id="@+id/index_field" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/numer_indeksu"
            app:layout_constraintTop_toBottomOf="@+id/name_field" tools:ignore="Autofill"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/haslo_field" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/haslo"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/index_field"
            tools:ignore="Autofill"/>
    <Button
            android:text="@string/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_student_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/potwierdzenie_field" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/potwierdzenie_field"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/potwierdz_haslo"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/haslo_field"
            tools:ignore="Autofill"/>
</android.support.constraint.ConstraintLayout>